[tool.poetry]
name = "user-auth"
version = "0.1.0"
description = ""
authors = ["Tes <teslimb36@gmail.com>"]
readme = "README.md"

packages = [
    { include = "./src" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
psycopg = "^3.2.1"
sqlalchemy = "^2.0.31"
passlib = "^1.7.4"
python-jose = "^3.3.0"
uvicorn = "^0.30.1"
uuid7 = "^0.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
ruff = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#[tool.mypy]
#plugins = pydantic.mypy

#follow_imports = silent
#warn_redundant_casts = True
#warn_unused_ignores = True
#disallow_any_generics = True
#check_untyped_defs = True
#no_implicit_reexport = True

# for strict mypy: (this is the tricky one :-)
disallow_untyped_defs = True

#[tool.pydantic-mypy]
#init_forbid_extra = True
#init_typed = True
#warn_required_dynamic_aliases = True